2005-08-13  Behdad Esfahbod  <behdad@behdad.org>

	* src/cairo-color.c: Fix conversion to short, to get a uniform
	range even for 0xffff.  In other words, a color component of
	of (1.0 - epsilon) would convert to 0xffff, not 0xfffe.

2005-08-13  Behdad Esfahbod  <behdad@behdad.org>

	* RELEASING:
	* Makefile.am: Generate sh1sum instead of md5sum.  Use gpg to
	sign it.  You need gpg set up.

2005-08-12  Carl Worth  <cworth@cworth.org>

	* RELEASING:
	* Makefile.am: Move tagging from an instruction in RELEASING to
	an automated step at the end of release-publish.

2005-08-13  Behdad Esfahbod  <behdad@behdad.org>

	* Makefile.am (release-publish): Check that the micro component
	of the version number is even.

	* RELEASING: Fixed the pattern to find all public header files.

2005-08-11  Carl Worth  <cworth@cworth.org>

	* src/cairo-font.c (_cairo_toy_font_face_fini): Fix inverted sense
	of assert statement which led to lots of unpleasant crashes.

2005-08-08  Carl Worth  <cworth@cworth.org>

	* src/cairoint.h: Add hash_entry field to cairo_font_face_t so
	that it can (optionally) be hashed.

	* src/cairo-font.c: (_cairo_toy_font_face_hash_table_lock),
	(_cairo_toy_font_face_hash_table_unlock),
	(_cairo_toy_font_face_init_key), (_cairo_toy_font_face_init),
	(_cairo_toy_font_face_fini), (_cairo_toy_font_face_keys_equal),
	(_cairo_toy_font_face_create), (_cairo_toy_font_face_destroy),
	(_cairo_toy_font_face_scaled_font_create),
	(_cairo_font_reset_static_data): Complete the remainder of the
	simple -> toy renaming. Convert the family/slant/weight ->
	cairo_toy_font_face_t mapping to use cairo-hash.c rather
	than cairo-cache.c.

2005-08-11  Carl Worth  <cworth@cworth.org>

	* src/cairo-ft-font.c: (_cairo_ft_unscaled_font_init),
	(_cairo_ft_unscaled_font_init_key),
	(_cairo_ft_unscaled_font_keys_equal),
	(_cairo_ft_unscaled_font_fini),
	(_cairo_ft_unscaled_font_map_destroy),
	(_cairo_ft_unscaled_font_map_lock),
	(_cairo_ft_unscaled_font_map_unlock),