@@ -1,5 +1,11 @@
 2005-08-13  Behdad Esfahbod  <behdad@behdad.org>
 
+	* src/cairo-path-data.c (_cairo_path_data_append_to_context):
+	Move checks for invalid number of points before the calls that
+	use the points.
+
+2005-08-13  Behdad Esfahbod  <behdad@behdad.org>
+
 	* src/cairo-color.c: Fix conversion to short, to get a uniform
 	range even for 0xffff.  In other words, a color component of
 	of (1.0 - epsilon) would convert to 0xffff, not 0xfffe.
